--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,21 @@
 :root {
-	--color1 {rgb(229,255,254)};
-}
-:root {
-	--color2 {rgb(51,51,25)};
+	--colora: #E5FFFE;
+	--colorb: #333319;
 }
 body {
 	width: 50em;
 	margin: 0 auto;
 	font-family: "Georgia Pro", Georgia, serif;
-	color: var(--color1);
-	background-color: var(--color2);
+	color: var(--colora);
+	background-color: var(--colorb);
 }
 a {
-	color: var(--color1);
-	background-color: var(--color2);
+	color: var(--colora);
+	background-color: var(--colorb);
 }
 a:hover {
-	color: var(--color2);
-	background-color: var(--color1);
+	color: var(--colorb);
+	background-color: var(--colora);
 }
 @media screen and (max-width: 50em) {
 	body {
